<resources>
    <string name="app_name">KursusKu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dilihat">Dilihat</string>
    <string name="pembeli">Pembeli</string>
    <string name="harga">Harga</string>
    <string name="remaining">Remaining</string>
    <string name="bisnis">Bisnis</string>
    <string name="desain">Desain</string>
    <string name="finasial">Finansial</string>
    <string name="fotografi">Fotografi</string>
    <string name="kantor">Kantor</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pengembangan">Pengembangan</string>
    <string name="kategori1">Kategori1</string>
    <string name="kategori2">Kategori2</string>
    <string name="nama_kursus">Nama kursus</string>
    <string name="keranjang">Keranjang</string>
    <string name="harga_asli">Rp49.900</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="semua">Semua</string>
    <string name="nothing_found">Tidak ada yang ditemukan</string>
    <string name="riwayat_pencarian">Riwayat pencarian</string>
    <string name="syarat">Syarat</string>
    <string name="yang_akan_anda_pelajari">Yang akan Anda pelajari</string>
    <string name="saldo_di_kursusku">Saldo di KursusKu</string>
    <string name="saldo">Saldo</string>
    <string name="keluar">Keluar</string>
    <string name="ubah">Ubah</string>
    <string name="selesai">Selesai</string>
    <string name="hapus">Hapus</string>
    <string name="bayar">Bayar</string>
    <string name="total_harga">Total Harga:</string>
    <string name="rp0">Rp0</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="versi">1.0.0</string>
    <string name="versi_aplikasi">Versi aplikasi</string>
    <string name="dimasukkan_ke_keranjang">Dimasukkan ke keranjang</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="nominal_isi_saldo">Nominal Isi Saldo</string>
    <string name="rp">Rp</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="transfer_virtual_account">Transfer Virtual Account</string>
    <string name="bri_virtual_account">BRI Virtual Account</string>
    <string name="mandiri_virtual_account">Mandiri Virtual Account</string>
    <string name="transfer_pulsa">Transfer Pulsa</string>
    <string name="indosat">Indosat</string>
    <string name="telkomsel">Telkomsel</string>
    <string name="carabayarbri"><b>ATM BRI</b>\n
        1.  Masukan Kartu ATM\n
        2.  Pilih \"Bahasa Indnesia\"\n
        2.  Masukan PIN\n
        4.  Pilih Transaksi Lain\n
        5.  Pilih Transfer\n
        6.  Pilih Bank BRI\n
        7.  Masukan Nomor Rekening Tujuan\n
        8.  Masukan Jumlah Transfer\n
        9.  Konfirmasi Pembayaran\n
        10. Pembayaran Selesai\n
        11. Kirim bukti pembayaran ke \"085865027669 (WA)\"\n
        \n
        <b>Mobile Banking BRI</b>\n
        1.  Buka aplikasi, kemudian pilih menu Mobile Banking BRI\n
        2.  Tap menu Transfer\n
        3.  Tap menu Sesama BRI\n
        4.  Masukkan nomor rekening BRI yang dituju\n
        5.  Masukkan jumlah transfer\n
        6.  Klik OK. Lalu, masukkan PIN. Klik SEND\n
        7.  Untuk melakukan verifikasi SMS, Klik OK\n
        8.  Terima SMS dari Mobile Banking BRI, lalu ketik YA &lt;spasi&gt; Kode Transaksi. Kalau bingung, ikuti saja petunjuk yang ada pada SMS tersebut\n
        9.  Kalau sudah benar, langsung Kirim SMS\n
        10. Pembayaran Selesai\n
        11. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="atm_bri">\u00201.  Masukan Kartu ATM\n
        2.  Pilih \"Bahasa Indnesia\"\n
        2.  Masukan PIN\n
        4.  Pilih Transaksi Lain\n
        5.  Pilih Transfer\n
        6.  Pilih Bank BRI\n
        7.  Masukan Nomor Rekening Tujuan\n
        8.  Masukan Jumlah Transfer\n
        9.  Konfirmasi Pembayaran\n
        10. Pembayaran Selesai\n
        11. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="mbanking_bri">\u00201.  Buka aplikasi, kemudian pilih menu Mobile Banking BRI\n
        2.  Tap menu Transfer\n
        3.  Tap menu Sesama BRI\n
        4.  Masukkan nomor rekening BRI yang dituju\n
        5.  Masukkan jumlah transfer\n
        6.  Klik OK. Lalu, masukkan PIN. Klik SEND\n
        7.  Untuk melakukan verifikasi SMS, Klik OK\n
        8.  Terima SMS dari Mobile Banking BRI, lalu ketik YA &lt;spasi&gt; Kode Transaksi. Kalau bingung, ikuti saja petunjuk yang ada pada SMS tersebut\n
        9.  Kalau sudah benar, langsung Kirim SMS\n
        10. Pembayaran Selesai\n
        11. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="carabayarmandiri"><b>ATM Mandiri</b>\n
        1. Masukkan kartu ATM Mandiri dan PIN kamu\n
        2. Pilih Transaksi Lainnya\n
        3. pilih Transfer\n
        4. pilih ke Rekening Mandiri\n
        5. Masukkan nomor Rekening Tujuan\n
        6. Masukkan nominal sesuai tagihan\n
        7. Validasi pembaayaran
        8. Pembayaran selesai\n
        9. Kirim bukti pembayaran ke \"085865027669 (WA)\"\n
        \n
        <b>Mobile Banking Mandiri</b>\n
        1. Login ke Mandiri Mobile Application kamu\n
        2. pilih Transfer\n
        3. Pilih Ke Rekening Mandiri\n
        4. Pilih Rekening Sumber\n
        5. Masukkan nomor Rekening Tujuan\n
        6. Masukkan nominal sesuai tagihan\n
        7. Validasi pembaayaran dan Masukkan \"MPIN\"\n
        8. Pembayaran selesai\n
        9. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="atm_mandiri">\u00201. Masukkan kartu ATM Mandiri dan PIN kamu\n
        2. Pilih Transaksi Lainnya\n
        3. pilih Transfer\n
        4. pilih ke Rekening Mandiri\n
        5. Masukkan nomor Rekening Tujuan\n
        6. Masukkan nominal sesuai tagihan\n
        7. Validasi pembaayaran
        8. Pembayaran selesai\n
        9. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="mbanking_mandiri">\u00201. Login ke Mandiri Mobile Application kamu\n
        2. pilih Transfer\n
        3. Pilih Ke Rekening Mandiri\n
        4. Pilih Rekening Sumber\n
        5. Masukkan nomor Rekening Tujuan\n
        6. Masukkan nominal sesuai tagihan\n
        7. Validasi pembaayaran dan Masukkan \"MPIN\"\n
        8. Pembayaran selesai\n
        9. Kirim bukti pembayaran ke \"085865027669 (WA)\"</string>
    <string name="nomor_hp_wa">No. HP (WA)</string>
    <string name="lihat_panduan_pembayaran"><u>Lihat Panduan Pembayaran</u></string>
    <string name="jumlah_pembayaran">Jumlah Pembayaran</string>
    <string name="facebook_app_id">997755534317016</string>
    <string name="fb_login_protocol_scheme">fb997755534317016</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>


</resources>
