<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <LinearLayout
        android:id="@+id/search_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="8dp">
        <Button
            android:id="@+id/btn_search_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/ic_arrow_back_black_24dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/searchLayout"
                android:background="@color/colorAbuMuda"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp"
                android:gravity="center"
                android:layout_marginRight="10dp">
                <EditText
                    android:id="@+id/search_et"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:hint="Cari kursus yang kamu inginkan"
                    android:layout_height="match_parent">
                </EditText>
                <Button
                    android:id="@+id/search_btn"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="25dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/ic_search_black_24dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/search_linear">
        <TextView
            android:id="@+id/tv_search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat_pencarian"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                android:id="@+id/btn_search_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:gravity="right"
                android:background="@drawable/sampah"/>
        </LinearLayout>
    </LinearLayout>
    <HorizontalScrollView
        android:id="@+id/search_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_linear"
        android:background="@color/white"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_search_semua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/semua"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_bisnis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/bisnis"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_desain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/desain"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_finasial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/finasial"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_fotografi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/fotografi"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_kantor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/kantor"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_pendidikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/pendidikan"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_search_pengembangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/pengembangan"
                android:textColor="@color/black"/>
        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/tv_nothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="#FFFFFF"
        android:textStyle="normal"
        tools:text="@string/nothing_found"
        android:layout_below="@+id/search_menu"/>
    <TextView
        android:id="@+id/tv_nothing2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="#FFFFFF"
        android:textStyle="normal"
        tools:text="@string/nothing_found"
        android:layout_below="@+id/linear_search_history"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/search_menu"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_search_history"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/search_progressBar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>