<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/white"
    android:layout_marginBottom="8dp">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_item_keranjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_item_keranjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cb_item_keranjang"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_keranjang_nama"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/nama_kursus"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tv_item_keranjang_harga"
        app:layout_constraintLeft_toRightOf="@id/iv_item_keranjang"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_keranjang_ubah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tv_item_keranjang_harga"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_keranjang_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:maxLines="2"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/harga"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_item_keranjang"
        app:layout_constraintTop_toBottomOf="@id/tv_item_keranjang_nama" />

    <TextView
        android:id="@+id/btn_item_keranjang_hapus"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/hapus"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_keranjang_ubah" />
</androidx.constraintlayout.widget.ConstraintLayout>