<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAbuMuda"
    tools:context=".TopUpActivity">
    <include
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/actionbar"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_isisaldo_nominal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/nominal_isi_saldo"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/actionbar"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_isisaldo_nominal"
        app:layout_constraintLeft_toLeftOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                android:id="@+id/tv_isisaldo_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/rp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorAbuMuda"
                android:textColor="@color/colorAbuabu" />
            <EditText
                android:id="@+id/et_nominalsaldo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nominal_isi_saldo"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/v_saldo_bg"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_isisaldo_nominal"/>
    <TextView
        android:id="@+id/tv_metodepembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/pilih_metode_pembayaran"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/v_saldo_bg"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_metodepembayaran"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>